main/objects/API_Health_Check__c/API_Health_Check__c.object-meta.xml
<CustomObject>
    <label>API Health Check</label>
    <nameField>
        <displayFormat>API-{YY}{MM}{DD}-{000000}</displayFormat>
        <label>API Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>