main/objects/API_Health_Check__c/fields/Callout_Response__c.field-meta.xml
<CustomField>
    <fullName>Callout_Response__c</fullName>
    <label>Callout Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>