main/objects/API_Health_Check__c/fields/Callout_Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Callout_Time_Difference__c</fullName>
    <formula>Differenec_field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callout Time Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>