main/objects/API_Health_Check__c/fields/Differenec_field__c.field-meta.xml
<CustomField>
    <fullName>Differenec_field__c</fullName>
    <label>Differenec field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>