main/objects/API_Health_Check__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>TextArea</type>
</CustomField>