main/objects/API_Health_Check__c/fields/Final_Time__c.field-meta.xml
<CustomField>
    <fullName>Final_Time__c</fullName>
    <label>Final Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>