main/objects/API_Health_Check__c/fields/Initial_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Time__c</fullName>
    <label>Initial Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>